# IrlEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/src/: defines.h  defines.hpp  entry_point.hpp  game_types.hpp
engine/src/core/: app_clock.cpp  app_clock.hpp  application.cpp  application.hpp  assertion.hpp  asserts.h  log.c  log.h  logger.cpp  logger.hpp  window.cpp  window.hpp
engine/src/platform/: platform.hpp  platform_linux.cpp  platform_win32.cpp  window.cpp  window.hpp  window_glfw.cpp
engine/src/renderer/: renderer.cpp  renderer.hpp  renderer_backend.cpp  renderer_backend.hpp  renderer_frontend.cpp  renderer_frontend.hpp  renderer_types.hpp
engine/src/renderer/opengl/: opengl_backend.cpp  opengl_backend.hpp  opengl_platform.hpp  opengl_types.hpp
engine/src/renderer/vulkan/: vulkan_backend.cpp  vulkan_backend.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_platform.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_types.hpp
engine/src/utils/: event.hpp  eventCallback.hpp  irl_general_allocator.cpp  irl_general_allocator.hpp
test/: CMakeLists.txt
test/src/: entry_point.cpp  game.cpp  game.hpp  main.c
